--- a/css.css
+++ b/css.css
@@ -7,4 +7,4 @@ a:active { background-color:orange; color:black; text-decoration:none; }
 .squished { margin:0; padding:0; }
 .rowb { border:1px solid #ddd; padding:24px; margin:0; }
 .rowh { border:1px solid blue; padding:34px; margin:0; }
-.buildb { background-color:#ddd; vertical-align:middle; font-weight:bold; font-size:7pt; padding:4px; }
+.buildb { background-color:#555; color:#f6f6f6; vertical-align:middle; font-weight:bold; font-size:6pt; padding:5px 2px 5px 2px; }
